=========
CHANGELOG
=========

7.0.6+dev  (XXXX-XX-XX)
======================


7.0.6     (2022-01-07)
======================

**Bug fixes**

- Set default config for crispy form and messages tags to match with included bootstrap4
- Fix shapefile generation for GeometryCollection layers


7.0.5     (2021-12-21)
======================

**Bug fixes**

- Fix a template break in DEBUG False mode


7.0.4     (2021-12-17)
======================

**Bug fixes**

- Fix django dynamic formset multiple deletion https://github.com/elo80ka/django-dynamic-formset/issues/180#issuecomment-705011515


7.0.3     (2021-12-15)
======================

**New feature**

- Allow to choose regex which find attachments


7.0.2     (2021-12-08)
======================

**Bug fixes**

- Update JQuery formsets to fix item deletion

**New feature**

- Use map styles to configure colors in lists and detail views


7.0.1 (2021-11-30)
==================

**Bug fixes**

- Use a specific django-leaflet release instead of git+https to allow installation from pypi


7.0.0 (2021-11-30)
==================

**New features**

- Support django 2.2 to 3.2
- Support python 3.6 to 3.9
- Bootstrap 4
- Disable form field with settings
- Choose export columns from settings


6.1.1 (2020-03-30)
==================

**Bug fixes**

- Save sorted column by model rather than Django app


6.1.0 (2020-01-10)
==================

**New features**

- Add support of Django 2.0


6.0.5 (2019-12-20)
==================

**Bug fixes**

- Fix nav pills to choose language in forms


6.0.4 (2019-12-03)
==================

**Minor changes**

- Remove dependency on mock


6.0.3 (2019-11-25)
==================

**Bug fixes**

- Fix image size in ODT templates


6.0.2 (2019-11-25)
==================

**Bug fixes**

- Remove useless dependency django-shapes
- Fix autologin
- Fix XML attributes in ODT templates
- Fix logo and map size on ODT template


6.0.1 (2019-11-25)
==================

**Bug fixes**
