@@ -56,8 +56,13 @@ jobs:
     continue-on-error: true
     strategy:
       matrix:
-        python-version: [ 3.6, 3.9 ]
-        django-version: [ 2.2.*, 3.2.* ]
+        python-version: [ 3.6, 3.7, 3.8, 3.9, 3.10 ]
+        django-version: [ 2.2.*, 3.2.*, 4.0.* ]
+        exclude:
+          - django-version: 4.0.*
+            python-version: 3.6
+          - django-version: 4.0.*
+            python-version: 3.7
 
     steps:
     - uses: actions/checkout@v2
