@@ -3,7 +3,15 @@ CHANGELOG
 =========
 
 7.0.6+dev  (XXXX-XX-XX)
-======================
+=======================
+
+**New**
+
+- Support python 3.10 and django 4.0
+
+**Breaking changes**
+
+- New django-tinymce 3+. You should update your project settings if you customize this. https://django-tinymce.readthedocs.io/en/latest/installation.html#configuration
 
 
 7.0.6     (2022-01-07)
